--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Risen Dust Library</title>
+</head>
+<body style="font-family:system-ui; padding:24px;">
+  <h1>Risen Dust Library</h1>
+  <p>If you can read this, Pages is deploying your root HTML.</p>
+  <p>API test: <a href="/api/documents">/api/documents</a></p>
+</body>
+</html>
 
